Prevent 'No selected file' from wrapping to two lines.

--- a/src/General/css/style.css
+++ b/src/General/css/style.css
@@ -1411,6 +1411,7 @@ input#qr-filename {
   padding-left: 3px;
   overflow: hidden;
   text-overflow: ellipsis;
+  white-space: nowrap;
 }
 #qr-no-file {
   color: #AAA;
